--- a/style.css
+++ b/style.css
@@ -28,3 +28,12 @@ button {
 button:hover {
   background: #666;
 }
+
+#start-container {
+  max-width: 600px;
+  margin: auto;
+  padding: 4rem;
+  text-align: center;
+  background-color: #1e1e1e;
+  border-radius: 8px;
+}
